# jdp-htmx-chat

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  flake.nix  render.yaml
database/migrations/: V0001__message.sql  V0002__user.sql  V0003__session.sql
database/queries/: delete_message.sql  insert_message.sql  insert_session.sql  insert_user.sql  select_all_messages.sql  select_all_messages_text.sql  select_last_message.sql  select_last_message_text.sql  select_last_session.sql  select_last_user.sql  select_message.sql  select_session.sql  select_single_message_text.sql  select_user.sql  update_session_user.sql
macros/: Cargo.toml
macros/src/: lib.rs
src/: database.rs  extractors.rs  main.rs  middleware.rs  template.rs  tests.rs  validators.rs  websocket.rs
src/database/: constants.rs  message.rs  mod.rs  session.rs  user.rs
src/user/: mod.rs
static/: script.js  style.css
templates/: delete_message.html  header.html  index.html  index.html.tera  login.html  login_result.html  message.html  message_input.html  messages.html  messages.html.tera  new_message.html  new_message.html.tera  new_message_success.html
