workspace = { members = ["macros"] }
[package]
name = "jdp-chat-room"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
refinery = { version = "0.8.14", features = ["rusqlite-bundled"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
tungstenite = "0.24.0"
macros = { path = "macros" }
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["fs"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
askama = "0.12.1"
serde = "1.0.210"
uuid = { version = "1.10.0", features = ["v4"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
